--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/mverblud/coder-nodejs#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.17.3",
-    "morgan": "^1.10.0"
+    "express-handlebars": "^6.0.6",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   }
 }
