--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.3",
     "express-handlebars": "^6.0.6",
     "morgan": "^1.10.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^4.5.1"
   }
 }
