--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "ejs": "^3.1.8",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.6",
+    "knex": "^2.1.0",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "pug": "^3.0.2",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "sqlite3": "^5.0.8"
   }
 }
