--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://mverblud:OKsEHOlsWDvPBHej@mverblud.pawqn.mongodb.net/?retryWrites=true&w=majority
-DB_NAME = mongoDB
+DB_NAME = firebaseDB
