--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
 PORT=8080
-MONGODB_CNN=mongodb+srv://mverblud:OKsEHOlsWDvPBHej@mverblud.pawqn.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL_SESSION=mongodb+srv://mverblud:5hThdzKSJwfC3baO@mverblud.pawqn.mongodb.net/sessionMongoAtlas?retryWrites=true&w=majority
+MONGODB_CNN=mongodb+srv://mverblud:5hThdzKSJwfC3baO@mverblud.pawqn.mongodb.net/coderSession?retryWrites=true&w=majority
 DB_NAME = mongoDB
+HOST_MAIL=smtp-relay.sendinblue.com
+USER_MAIL=m.verblud@naranjax.com
+USER_PASSWORD=O4wq0j1JhyIEgbmW
+PORT_MAIL=587
+ACCOUNT_SID=ACbe9118b4ee08b4508877065497374540
+AUTH_TOKEN=56168a9041d13ebd5ca7815fefac09da
+MODO=cluster
