--- a/package.json
+++ b/package.json
@@ -20,12 +20,21 @@
   },
   "homepage": "https://github.com/mverblud/coder-nodejs#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.17.3",
+    "express-session": "^1.17.3",
     "firebase-admin": "^11.0.0",
     "mongoose": "^6.3.8",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.7.8",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "twilio": "^3.80.1",
+    "winston": "^3.8.1"
   }
 }
