--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ USER_PASSWORD=O4wq0j1JhyIEgbmW
 PORT_MAIL=587
 ACCOUNT_SID=ACbe9118b4ee08b4508877065497374540
 AUTH_TOKEN=56168a9041d13ebd5ca7815fefac09da
-MODO=cluster
+MODO=normal
